 - Added o.PatternType for creating types that match against a RegExp.
 - Added bower.json so that Bower has some more info about this package.
 - Attribute/Trait.install() now supports a second argument for specifying
   the value of the attribute(s).
 - The attributes attribute of Trait is now an object instead of an array.
 - Added o.local() to localize object property changes to a scope.

0.0.7 : 2013-06-18
 - Attributes on Traits (and Constructors) can now be pre-made o.Attribute
   objects which may be re-used.
 - Optimize some bits to produce a smaller minified output.
 - Remove o.is functions.. again, they are a nice-to-have that just bloats things.
 - Remove the special initArgs for attributes and traits in Attribute.
 - Support Travis CI.

0.0.6 : 2013-05-27
 - Merge o-types and o-attributes in to the main library.
 - New Trait and Constructor objects.
 - Redesign types so that each type is an object with coercions.
 - Migrate tests for QUnit to tap, and add many new tests.
 - Many many new tests.
 - Redesign Attribute.
 - Allow argKey to be nullable in attributes.
 - Support Type objects in o.writer.
 - Add a package.json for npm.
 - o.writer now returns the original value.
 - o.accessor returns the return value of o.writer if writing.
 - o.predicate now treats an undefined value as a lack of having.
 - Coercion now only validates against the first type, not parent types, since
   the value, before being coerced, will often times fail a parent's validation.

0.0.5 : 2013-04-14
 - Fix trailing commas in o-attribute.js breaking minification.

0.0.4 : 2013-04-14
 - Remove the option definition property.
 - Rename o.extend to o.augment.
 - Rename the default definition property to devoid.
 - Rename the extends definition property to augments.
 - Rename the isa definition property to type.
 - New primitive and object types for boolean, string, and number.
 - Added the nonEmptyString type.
 - Rename the extends type to instanceOf.
 - Added the typeOf type.