@@ -7,6 +7,8 @@ NEXT RELEASE
    the value of the attribute(s).
  - The attributes attribute of Trait is now an object instead of an array.
  - Added o.local() to localize object property changes to a scope.
+ - Attribute properties reader, writer, predicate, and clearer now take
+   false instead of null.
 
 0.0.7 : 2013-06-18
  - Attributes on Traits (and Constructors) can now be pre-made o.Attribute
